# workforce_demand_forecasting

./: .gitignore  README.md  fastapi.py  main.py  pyproject.toml
.streamlit/: confit.toml
src/: __init__.py  forecasting.py
static/: index.html  index_prev.html
